--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -157,11 +157,16 @@ jobs:
         uses: ilammy/setup-nasm@v1
         if: matrix.settings.host == 'windows-latest'
 
+      - name: Output toolchain
+        id: toolchain
+        shell: bash
+        run: echo "version=$(cat ./rust-toolchain)" >> "$GITHUB_OUTPUT"
+
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.settings.target }}
-          toolchain: nightly-2023-08-09
+          toolchain: ${{ steps.toolchain.outputs.version }}
 
       - name: Cache cargo registry
         uses: actions/cache@v4
