--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   bench:
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Bench
     runs-on: ubuntu-latest
     container:
@@ -28,11 +27,16 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
+      - name: Output toolchain
+        id: toolchain
+        shell: bash
+        run: echo "version=$(cat ./rust-toolchain)" >> "$GITHUB_OUTPUT"
+
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-apple-darwin
-          toolchain: nightly-2023-08-09
+          toolchain: ${{ steps.toolchain.outputs.version }}
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -41,12 +45,6 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
           key: bench-cargo-cache
-
-      - name: Cache yarn
-        uses: actions/cache@v4
-        with:
-          path: .yarn/cache
-          key: bench-yarn-cache-node-16
 
       - name: Install dependencies
         run: yarn install --immutable
