--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,11 +24,16 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
+      - name: Output toolchain
+        id: toolchain
+        shell: bash
+        run: echo "version=$(cat ./rust-toolchain)" >> "$GITHUB_OUTPUT"
+
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-apple-darwin
-          toolchain: nightly-2023-08-09
+          toolchain: ${{ steps.toolchain.outputs.version }}
           components: clippy, rustfmt
 
       - name: Cache cargo registry
