--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -28,11 +28,16 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
+      - name: Output toolchain
+        id: toolchain
+        shell: bash
+        run: echo "version=$(cat ./rust-toolchain)" >> "$GITHUB_OUTPUT"
+
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-apple-darwin
-          toolchain: nightly-2023-08-09
+          toolchain: ${{ steps.toolchain.outputs.version }}
 
       - name: Cache cargo registry
         uses: actions/cache@v3
@@ -41,12 +46,6 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
           key: bench-cargo-cache
-
-      - name: Cache yarn
-        uses: actions/cache@v3
-        with:
-          path: .yarn/cache
-          key: bench-yarn-cache-node-16
 
       - name: Install dependencies
         run: yarn install --immutable
