--- a/.github/workflows/cargo-test.yaml
+++ b/.github/workflows/cargo-test.yaml
@@ -23,11 +23,16 @@ jobs:
         with:
           submodules: true
 
+      - name: Output toolchain
+        id: toolchain
+        shell: bash
+        run: echo "version=$(cat ./rust-toolchain)" >> "$GITHUB_OUTPUT"
+
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-apple-darwin
-          toolchain: nightly-2023-08-09
+          toolchain: ${{ steps.toolchain.outputs.version }}
 
       - name: Cache cargo registry
         uses: actions/cache@v3
