--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -25,11 +25,12 @@ jobs:
         settings:
           - host: macos-14
             target: 'x86_64-apple-darwin'
-            setup: brew install nasm
+            setup: brew install nasm llvm
             build: |
               rustc --print target-cpus
+              export PATH="/opt/homebrew/opt/llvm/bin:$PATH"
+              clang --version
               yarn build --target x86_64-apple-darwin
-              strip -x skia.darwin-x64.node
             downloadTarget: ''
           - host: windows-latest
             build: yarn build --target x86_64-pc-windows-msvc
@@ -39,10 +40,7 @@ jobs:
             target: 'x86_64-unknown-linux-gnu'
             downloadTarget: ''
             docker: ghcr.io/brooooooklyn/canvas/ubuntu-builder:jammy
-            build: >-
-              set -e &&
-              yarn build --target x86_64-unknown-linux-gnu &&
-              strip skia.linux-x64-gnu.node
+            build: yarn build --target x86_64-unknown-linux-gnu
           - host: ubuntu-latest
             downloadTarget: 'x86_64-unknown-linux-musl'
             target: 'x86_64-unknown-linux-musl'
@@ -52,11 +50,12 @@ jobs:
               export LIB_AOM_STATIC_LIB_PATH=/usr/lib &&
               export LIB_AOM_INCLUDE_PATH=/usr/include/aom/aom &&
               export LIB_AOM_PKG_CONFIG_PATH=/usr/lib/pkgconfig &&
-              yarn build --target x86_64-unknown-linux-musl &&
-              strip skia.linux-x64-musl.node
+              yarn build --target x86_64-unknown-linux-musl
           - host: macos-14
             downloadTarget: 'aarch64-apple-darwin'
             target: 'aarch64-apple-darwin'
+            setup: |
+              brew install llvm
             build: |
               sudo rm -Rf /Library/Developer/CommandLineTools/SDKs/*;
               export CC=$(xcrun -f clang);
@@ -64,8 +63,9 @@ jobs:
               SYSROOT=$(xcrun --sdk macosx --show-sdk-path);
               export CFLAGS="-isysroot $SYSROOT -isystem $SYSROOT";
               export MACOSX_DEPLOYMENT_TARGET='11.0'
+              export PATH="/opt/homebrew/opt/llvm/bin:$PATH"
+              clang --version
               yarn build --target aarch64-apple-darwin
-              strip -x skia.darwin-arm64.node
           - host: ubuntu-latest
             downloadTarget: 'aarch64-unknown-linux-gnu'
             target: 'aarch64-unknown-linux-gnu'
@@ -74,8 +74,7 @@ jobs:
               set -e &&
               rustup toolchain install $(cat ./rust-toolchain) &&
               rustup target add aarch64-unknown-linux-gnu &&
-              yarn build --target aarch64-unknown-linux-gnu &&
-              llvm-strip-16 skia.linux-arm64-gnu.node
+              yarn build --target aarch64-unknown-linux-gnu
           - host: ubuntu-latest
             target: 'aarch64-unknown-linux-musl'
             downloadTarget: 'aarch64-unknown-linux-musl'
@@ -88,8 +87,7 @@ jobs:
               export LIB_AOM_PKG_CONFIG_PATH=/usr/aarch64-alpine-linux-musl/aom/lib/pkgconfig/aom.pc &&
               export LIB_AOM_INCLUDE_PATH=/usr/aarch64-alpine-linux-musl/aom/include &&
               export LIB_AOM_STATIC_LIB_PATH=/usr/aarch64-alpine-linux-musl/aom/lib &&
-              yarn build --target aarch64-unknown-linux-musl &&
-              /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip skia.linux-arm64-musl.node
+              yarn build --target aarch64-unknown-linux-musl
           - host: ubuntu-latest
             target: 'armv7-unknown-linux-gnueabihf'
             downloadTarget: 'armv7-unknown-linux-gnueabihf'
@@ -103,9 +101,7 @@ jobs:
               sudo docker cp ubuntu-jammy-armv7:/usr/lib/llvm-14/lib /usr/arm-linux-gnueabihf/lib/llvm-14/lib
               sudo docker cp ubuntu-jammy-armv7:/usr/lib/llvm-14/include /usr/arm-linux-gnueabihf/lib/llvm-14/include
               docker stop ubuntu-jammy-armv7
-            build: |
-              yarn build --target armv7-unknown-linux-gnueabihf --zig --zig-link-only --zig-abi-suffix=2.18
-              arm-linux-gnueabihf-strip skia.linux-arm-gnueabihf.node
+            build: yarn build --target armv7-unknown-linux-gnueabihf --zig --zig-link-only --zig-abi-suffix=2.18
           - host: ubuntu-latest
             target: 'aarch64-linux-android'
             downloadTarget: 'aarch64-linux-android'
@@ -115,7 +111,6 @@ jobs:
               chmod 777 "${ANDROID_NDK_LATEST_HOME}/toolchains/llvm/prebuilt/linux-x86_64/lib/clang/${CLANG_VERSION}/lib/linux/aarch64/libgcc.a"
               echo "INPUT(-lunwind)" > "${ANDROID_NDK_LATEST_HOME}/toolchains/llvm/prebuilt/linux-x86_64/lib/clang/${CLANG_VERSION}/lib/linux/aarch64/libgcc.a"
               yarn build --target aarch64-linux-android
-              ${ANDROID_NDK_LATEST_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-strip skia.android-arm64.node
 
     name: stable - ${{ matrix.settings.target }} - node@18
     runs-on: ${{ matrix.settings.host }}
