--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,8 @@ mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }
 [build-dependencies]
 cc         = "1"
 napi-build = "2"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = "symbols"
