--- a/.github/workflows/cargo-test.yaml
+++ b/.github/workflows/cargo-test.yaml
@@ -16,7 +16,7 @@ jobs:
   build:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: stable - macOS - cargo - test
-    runs-on: macos-latest
+    runs-on: macos-14
 
     steps:
       - uses: actions/checkout@v4
