--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -199,7 +199,7 @@ jobs:
       fail-fast: false
       matrix:
         settings:
-          - host: macos-14
+          - host: macos-latest
             target: 'x86_64-apple-darwin'
           - host: windows-latest
             target: 'x86_64-pc-windows-msvc'
@@ -261,7 +261,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['18', '20']
+        node: ['20', '21']
     runs-on: ubuntu-latest
 
     steps:
