--- a/.github/workflows/skia.yaml
+++ b/.github/workflows/skia.yaml
@@ -6,6 +6,10 @@ on:
       - release
     tags-ignore:
       - '**'
+
+env:
+  MACOSX_DEPLOYMENT_TARGET: '10.13'
+
 jobs:
   build:
     if: "!contains(github.event.head_commit.message, 'skip skia')"
@@ -13,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-14, windows-latest]
 
     name: stable - ${{ matrix.os }} - build skia
     runs-on: ${{ matrix.os }}
@@ -22,6 +26,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+
+      - name: List llvm dir
+        if: matrix.os == 'windows-latest'
+        run: ls -R "C:\Program Files\LLVM"
+        shell: bash
 
       - name: Setup node
         uses: actions/setup-node@v4
@@ -39,13 +48,14 @@ jobs:
         shell: bash
 
       - name: Install tools on macOS
-        run: brew install ninja
-        if: matrix.os == 'macos-latest'
+        run: brew install ninja llvm
+        if: matrix.os == 'macos-14'
 
       - name: Install tools on Windows
         if: matrix.os == 'windows-latest'
         run: |
           choco install llvm ninja -y
+          choco upgrade llvm
           pip install certifi
 
       - name: Login to GitHub Container Registry
@@ -56,21 +66,26 @@ jobs:
           username: ${{ secrets.GH_CONTAINER_UNAME }}
           password: ${{ secrets.GH_TOKEN }}
 
+      - name: Sync deps on host
+        run: python ./tools/git-sync-deps
+        if: matrix.os == 'ubuntu-latest'
+        working-directory: skia
+
       - name: Compile skia
         if: matrix.os == 'ubuntu-latest'
         run: |
           docker pull ghcr.io/brooooooklyn/canvas/ubuntu-builder:jammy
           docker tag ghcr.io/brooooooklyn/canvas/ubuntu-builder:jammy builder
-          docker run --user "$(id -u):$(id -g)" --rm -v $(pwd):/canvas -w /canvas builder node ./scripts/build-skia.js
-        env:
-          PYTHONHTTPSVERIFY: 0
+          docker run --user "$(id -u):$(id -g)" -e PYTHONHTTPSVERIFY=0 -e SKIP_SYNC_SK_DEPS=0 --rm -v $(pwd):/canvas -w /canvas builder node ./scripts/build-skia.js
 
       - name: Compile skia
-        if: matrix.os == 'macos-latest'
+        if: matrix.os == 'macos-14'
         env:
           PYTHONHTTPSVERIFY: 0
         run: |
-          node ./scripts/build-skia.js
+          export PATH="/opt/homebrew/opt/llvm/bin:$PATH"
+          clang --version
+          node ./scripts/build-skia.js --target=x86_64-apple-darwin
 
       - name: Compile skia
         shell: powershell
@@ -92,7 +107,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'skip skia')"
 
     name: stable - apple-silicon - build skia
-    runs-on: macos-latest
+    runs-on: macos-14
 
     steps:
       - uses: actions/checkout@v4
@@ -115,10 +130,15 @@ jobs:
         shell: bash
 
       - name: Install tools on macOS
-        run: brew install ninja
+        run: brew install ninja llvm
 
       - name: Compile skia
-        run: node ./scripts/build-skia.js --target=aarch64-apple-darwin
+        run: |
+          export PATH="/opt/homebrew/opt/llvm/bin:$PATH"
+          clang --version
+          node ./scripts/build-skia.js --target=aarch64-apple-darwin
+        env:
+          MACOSX_DEPLOYMENT_TARGET: '11.0'
 
       - name: Install dependencies
         run: yarn install --immutable --mode=skip-build
@@ -185,11 +205,20 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+          architecture: 'x64'
+
+      - name: Sync deps on host
+        run: python ./tools/git-sync-deps
+        working-directory: skia
+
       - name: Compile skia
         run: |
           docker pull ghcr.io/brooooooklyn/canvas/ubuntu-builder:jammy-aarch64
           docker tag ghcr.io/brooooooklyn/canvas/ubuntu-builder:jammy-aarch64 builder
-          docker run --user "$(id -u):$(id -g)" --rm -v $(pwd):/canvas -w /canvas builder node ./scripts/build-skia.js --target=aarch64-unknown-linux-gnu
+          docker run --user "$(id -u):$(id -g)" -e SKIP_SYNC_SK_DEPS=0 --rm -v $(pwd):/canvas -w /canvas builder node ./scripts/build-skia.js --target=aarch64-unknown-linux-gnu
 
       - name: Install dependencies
         run: yarn install --immutable --mode=skip-build
