--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ anyhow = "1"
 base64 = "0.21"
 cssparser = "0.29"
 infer = "0.15"
-libavif = { version = "0.11", default-features = false, features = [
+libavif = { version = "0.12", default-features = false, features = [
   "codec-aom",
 ] }
 napi = { version = "2", default-features = false, features = [
@@ -39,3 +39,8 @@ mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }
 [build-dependencies]
 cc         = "1"
 napi-build = "2"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = "symbols"
