--- a/npm/android-arm64/package.json
+++ b/npm/android-arm64/package.json
@@ -33,5 +33,8 @@
     "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
-  "repository": "https://github.com/Brooooooklyn/canvas.git"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Brooooooklyn/canvas.git"
+  }
 }
