--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.50",
   "description": "Canvas for Node.js with skia backend",
   "main": "index.js",
-  "repository": "https://github.com/Brooooooklyn/canvas.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Brooooooklyn/canvas.git"
+  },
   "license": "MIT",
   "keywords": [
     "napi-rs",
